ci: test supported Java versions